# BuildHaven

./: .dockerignore  .gitignore  .woodpecker.yml  Cargo.toml  Dockerfile  build.rs  compose.yml  docker-compose.yml  prometheus.yml  readme.md
.sqlx/: query-0822e4de6f1eb47d363d98545e7eaf97167b6999a781226688c11bc54272d49f.json  query-082bd2bd83e56f94267f71f2749811a73cfc8828c0cebe472e106ea5b6aebcff.json  query-4d48f51d419421809d474e27629ba02925a83a67fce2493f2004010a2d07d100.json  query-8ac697cd5b0a5adea22324db55f8f41ac344cc24566d06a2a537f924bbc063e7.json  query-8ded74e8c335a2714515a853a9d455b5cae2d35a497171a4e67090303350ecd7.json  query-95b300780bdae65312564b197c2b1bfdce4c297705d70626ca0e48f512575aaa.json  query-969276134927d310d0384a1db26a52a453918bdd4041b90ed3f4d153aa87b568.json  query-a2a40808d9575e922c00fbb9d89635f960e9e89224292c463b981534b8363c53.json  query-d522a5226ae07d781595351e2db592678e46fa0db686e0d70d387a557f2130ea.json  query-e308e201291748600f0400aa9bff58724666f14d32e22715b4312d8378dcfbda.json  query-ead20bf717fc71fe8b38194dea5085e6d4ac7cc5f65a3902585b0352afbffcb4.json
benchmarks/: 2026-04-20_09-10-16.txt  2026-04-20_09-13-54.txt  2026-04-20_09-17-03.txt  2026-04-28_08-49-11.txt  2026-05-05_17-47-39.txt  2026-05-05_18-07-02.txt  curl-format.txt
docs/: architecture.md  assets.md  authentication.md  backend.md  bootstrap.md  ci_cd.md  dependencies.md  deployment.md  diagrams.md  features.md  frontend.md  glossary.md  infrastructure.md  jobs.md  modules.md  observability.md  principles.md  roadmap.md  security.md  session-management.md  state.md  structure.md  testing.md
migrations/: 20260402022251_create_posts_table.sql
scripts/: benchmark.sh  check.sh  deploy.sh  grafana.sh  prometheus.sh  start-observability.sh  stop-observability.sh
sql/: 001_resume_core.sql  002_education_experience.sql  003_skills_certifications.sql  indexes.sql
src/: api.rs  assets.rs  auth.rs  bootstrap.rs  config.rs  constants.rs  content.rs  context.rs  cors.rs  error.rs  handlers.rs  jobs.rs  leptos.rs  lib.rs  logging.rs  main.rs  metrics.rs  middleware.rs  models.rs  navbar.rs  pool.rs  rate_limit.rs  repository.rs  router.rs  routes.rs  security.rs  services.rs  session.rs  shutdown.rs  state.rs  telemetry.rs  templates.rs  utils.rs
static/css/: aspect.css  base.css  buttons.css  cards.css  containers.css  disclosure.css  dropdown.css  footer.css  grids.css  layout.css  media.css  navbar.css  page-header.css  pages.css  posts.css  stats.css  typography.css  variables.css
static/css/components/: buttons.css  cards.css  containers.css  dropdown.css  footer.css  grids.css  navbar.css
static/css/pages/: contact.css
static/js/: javascript.js  navbar.js  theme.js
templates/: base.html  blog.html  contact_me.html
templates/pages/: assets.html  blog.html  contact_me.html  docs.html  food.html  food_detail.html  login.html  register.html
templates/partials/: footer.html  navbar.html
tests/: common.rs  health.rs  repository.rs  tests.rs
