[package]
name = "personal-website"
version = "0.4.0"
edition = "2024"
default-run = "personal-website"

[dependencies]
axum = "0.7"
askama = "0.12"
askama_axum = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header", "compression-gzip", "cors", "limit"] }
tower_governor = { version = "0.3", features = ["axum"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }
pulldown-cmark = "0.13.0"
hyper = "1.8.1"
once_cell = "1.21.4"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
dotenvy = "0.15.7"
uuid = {version = "1.22.0", features = ["serde", "v4"]}
chrono = "0.4.44"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
cargo-bloat = "0.12.1"
