[package]
name = "buildhaven"
default-run = "buildhaven"
version = "0.4.1"
edition = "2024"

[features]
default = []

debug-logging = []
cors = []
gzip = []
rate-limit = []

[dependencies]
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
askama = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header", "compression-gzip", "cors", "limit"] }
tower_governor = { version = "0.3", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
pulldown-cmark = "0.13.0"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
dotenvy = "0.15.7"
uuid = {version = "1.22.0", features = ["serde", "v4"]}
chrono = "0.4.44"
walkdir = "2.5.0"
thiserror = "2.0.18"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
cargo-bloat = "0.12.1"

[lints.rust]
unsafe_code = "forbid"
unused = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true