[package]
name = "buildhaven"
default-run = "buildhaven"
version = "0.4.2"
edition = "2024"

[dependencies]
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["cookie"] }
askama = "0.16.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header", "compression-gzip", "cors", "limit", "compression-br", "compression-deflate"] }
tower_governor = { version = "0.8.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1.52.2", features = ["full"] }
pulldown-cmark = "0.13.0"
sha2 = "0.11.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono", "macros"] }
dotenvy = "0.15.7"
uuid = {version = "1.23.1", features = ["serde", "v7"]}
chrono = "0.4.44"
thiserror = "2.0.18"
argon2 = "0.5"
password-hash = "0.6.1"
rand_core = "0.10.1"
time = "0.3.47"
validator = "0.20.0"
num_cpus = "1.17.0"
tower = "0.5.3"
prometheus = "0.14.0"
once_cell = "1.21.4"
hex = "0.4.3"
usvg = "0.47"

[build-dependencies]
walkdir = "2"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1"
cargo-bloat = "0.12.1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
